manifests-failed/ksoc-plugins-1.4.27.tgz-manifest.yaml
---
# Source: ksoc-plugins/templates/ksoc-guard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  ksoc-guard
  namespace: ksoc-plugins-1.4.27.tgz
  labels:
    app_name: ksoc-guard
    app_version: "v1.1.8"
    maintained_by: ksoc
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app_name: ksoc-guard
    app_version: "v1.1.8"
    maintained_by: ksoc
---
# Source: ksoc-plugins/templates/ksoc-sbom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  ksoc-sbom
  namespace: ksoc-plugins-1.4.27.tgz
  labels:
    app_name: ksoc-sbom
    app_version: "v1.1.12"
    maintained_by: ksoc
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app_name: ksoc-sbom
    app_version: "v1.1.12"
    maintained_by: ksoc
---
# Source: ksoc-plugins/templates/ksoc-guard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksoc-guard
  namespace: ksoc-plugins-1.4.27.tgz
  labels:
    app_name: ksoc-guard
    app_version: "v1.1.8"
    maintained_by: ksoc
spec:
  minReadySeconds: 90
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app_name: ksoc-guard
  template:
    metadata:
      labels:
        app_name: ksoc-guard
        app_version: "v1.1.8"
        maintained_by: ksoc
      annotations:
        linkerd.io/inject: disabled
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: ksoc-guard
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
        - name: ksoc-guard
          image: us.gcr.io/ksoc-public/ksoc-guard:v1.1.8
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
          - mountPath: /tmp/k8s-webhook-server/serving-certs
            name: cert
            readOnly: true
          - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
            name: api-token
            readOnly: true
          resources:
            limits:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 500Mi
            requests:
              cpu: 100m
              ephemeral-storage: 100Mi
              memory: 100Mi
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: ksoc-guard-self-signed-cert
      - name: api-token
        secret:
          secretName: ksoc-guard-api-token-secret
---
# Source: ksoc-plugins/templates/ksoc-sbom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksoc-sbom
  namespace: ksoc-plugins-1.4.27.tgz
  labels:
    app_name: ksoc-sbom
    app_version: "v1.1.12"
    maintained_by: ksoc
spec:
  minReadySeconds: 90
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app_name: ksoc-sbom
  template:
    metadata:
      labels:
        app_name: ksoc-sbom
        app_version: "v1.1.12"
        maintained_by: ksoc
      annotations:
        linkerd.io/inject: disabled
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: ksoc-sbom
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
        - name: ksoc-sbom
          image: us.gcr.io/ksoc-public/ksoc-sbom:v1.1.12
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
          - mountPath: /tmp
            name: temp-image-dir
            readOnly: false
          - mountPath: /tmp/k8s-webhook-server/serving-certs
            name: cert
            readOnly: true
          - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
            name: api-token
            readOnly: true
          resources:
            limits:
              cpu: 1000m
              ephemeral-storage: 25Gi
              memory: 2Gi
            requests:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 1Gi
      volumes:
      - name: temp-image-dir
        emptyDir: {}
      - name: cert
        secret:
          defaultMode: 420
          secretName: ksoc-sbom-self-signed-cert
      - name: api-token
        secret:
          secretName: ksoc-sbom-api-token-secret
---
# Source: ksoc-plugins/templates/ksoc-sync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksoc-sync
  namespace: ksoc-plugins-1.4.27.tgz
  labels:
    app_name: ksoc-sync
    app_version: "v1.1.4"
    maintained_by: ksoc
spec:
  minReadySeconds: 90
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app_name: ksoc-sync
  template:
    metadata:
      labels:
        app_name: ksoc-sync
        app_version: "v1.1.4"
        maintained_by: ksoc
      annotations:
        linkerd.io/inject: disabled
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: ksoc-sync
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
        - name: ksoc-sync
          image: us.gcr.io/ksoc-public/ksoc-sync:v1.1.4
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
          - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
            name: api-token
            readOnly: true
          resources:
            limits:
              cpu: 200m
              ephemeral-storage: 1Gi
              memory: 256Mi
            requests:
              cpu: 100m
              ephemeral-storage: 100Mi
              memory: 128Mi
      volumes:
      - name: api-token
        secret:
          secretName: ksoc-sync-api-token-secret
---
# Source: ksoc-plugins/templates/ksoc-watch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksoc-watch
  namespace: ksoc-plugins-1.4.27.tgz
  labels:
    app_name: ksoc-watch
    app_version: "v1.1.15"
    maintained_by: ksoc
spec:
  minReadySeconds: 90
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app_name: ksoc-watch
  template:
    metadata:
      labels:
        app_name: ksoc-watch
        app_version: "v1.1.15"
        maintained_by: ksoc
      annotations:
        linkerd.io/inject: disabled
        sidecar.istio.io/inject: "false"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      serviceAccountName: ksoc-watch
      containers:
        - name: ksoc-watch
          image: us.gcr.io/ksoc-public/ksoc-watch:v1.1.15
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
          - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
            name: api-token
            readOnly: true
          resources:
            limits:
              cpu: 250m
              ephemeral-storage: 1Gi
              memory: 512Mi
            requests:
              cpu: 100m
              ephemeral-storage: 100Mi
              memory: 128Mi
      volumes:
      - name: api-token
        secret:
          secretName: ksoc-watch-api-token-secret
---
# Source: ksoc-plugins/templates/ksoc-guard/mutating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: ksoc-guard
  namespace: ksoc-plugins-1.4.27.tgz
  annotations:
    cert-manager.io/inject-ca-from: ksoc-plugins-1.4.27.tgz/ksoc-guard
  labels:
    app_name: ksoc-guard
    app_version: "v1.1.8"
    maintained_by: ksoc
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: ksoc-guard
        namespace: ksoc-plugins-1.4.27.tgz
        path: /mutate
    failurePolicy: Ignore
    timeoutSeconds: 10
    name: guard.ksoc.com
    rules:
      - apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE" ]
        resources: [ "daemonsets", "deployments", "statefulsets" ]
      - apiGroups: [ "batch" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE" ]
        resources: [ "jobs", "cronjobs" ]
      - apiGroups: [ "rbac.authorization.k8s.io" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE" ]
        resources: [ "rolebindings", "clusterrolebindings", "roles", "clusterroles" ]
      - apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE" ]
        resources: [ "pods", "namespaces" ]
    sideEffects: NoneOnDryRun
---
# Source: ksoc-plugins/templates/ksoc-sbom/mutating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: ksoc-sbom
  namespace: ksoc-plugins-1.4.27.tgz
  annotations:
    cert-manager.io/inject-ca-from: ksoc-plugins-1.4.27.tgz/ksoc-sbom # needs to be cert name!
  labels:
    app_name: ksoc-sbom
    app_version: "v1.1.12"
    maintained_by: ksoc
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ksoc-sbom
      namespace: ksoc-plugins-1.4.27.tgz
      path: /mutate-v1-pod
  failurePolicy: Ignore
  name: sbom.ksoc.com
  timeoutSeconds: 10
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - pods
  sideEffects: NoneOnDryRun
---
# Source: ksoc-plugins/templates/ksoc-guard/validating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ksoc-guard
  namespace: ksoc-plugins-1.4.27.tgz
  annotations:
    cert-manager.io/inject-ca-from: ksoc-plugins-1.4.27.tgz/ksoc-guard
  labels:
    app_name: ksoc-guard
    app_version: "v1.1.8"
    maintained_by: ksoc
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: ksoc-guard
        namespace: ksoc-plugins-1.4.27.tgz
        path: /validate
    failurePolicy: Ignore
    timeoutSeconds: 10
    name: guard.ksoc.com
    rules:
      - apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE" ]
        resources: [ "daemonsets", "deployments", "statefulsets" ]
      - apiGroups: [ "batch" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE" ]
        resources: [ "jobs", "cronjobs" ]
      - apiGroups: [ "rbac.authorization.k8s.io" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE" ]
        resources: [ "rolebindings", "clusterrolebindings", "roles", "clusterroles" ]
      - apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE" ]
        resources: [ "pods", "namespaces" ]
    sideEffects: NoneOnDryRun
